--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,11 @@
             <version>1.18.28</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
