--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t $APPLICATION_NAME:$IMAGE_TAG .
-      - docker tag $APPLICATION_NAME:$IMAGE_TAG $REPOSITORY_URI:latest
+      - docker tag $APPLICATION_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
