--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,19 @@
 version: 0.2
 phases:
-build:
-  install:
+  pre_build:
+    commands:
+      - echo Test started on `date`
+      - echo Logging in to Amazon ECR....
+      - mvn package
+      - aws --version
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+  build:
     commands:
       - echo Build started on `date`
-      - sudo yum update -y
-      - sudo yum install java-17-openjdk-devel
-      - sudo yum install docker -y
-      - sudo service docker start
-      - mvn test
-pre_build:
-  - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-post_build:
-  commands:
-    - echo Build completed on `date`
-    - mvn package
+  post_build:
+    commands:
+      - echo Build completed on `date`
+      - echo pushing to repo
 artifacts:
   files:
     - target/spring-boot-basic-example-0.0.1-SNAPSHOT.jar
