--- a/template.yaml
+++ b/template.yaml
@@ -6,13 +6,12 @@ Globals:
     Timeout: 30
 
 Resources:
-  ProfileApiFunction:
+  SpringBootBasicExample:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: .
       Handler: com.example.awsdemo.config.AWSStreamHandler::handleRequest
       Runtime: java17
-      AutoPublishAlias: production
+      AutoPublishAlias: dev
       SnapStart:
         ApplyOn: PublishedVersions
       Architectures:
@@ -22,7 +21,7 @@ Resources:
         Variables:
           JAVA_TOOL_OPTIONS: -XX:+TieredCompilation -XX:TieredStopAtLevel=1
       Events:
-        HelloWorld:
+        Employee:
           Type: Api
           Properties:
             Path: /{proxy+}
