--- a/template.yaml
+++ b/template.yaml
@@ -29,7 +29,7 @@ Resources:
       Runtime: java17
       AutoPublishAlias: !Ref Stage
       DeploymentPreference:
-        Type: Canary10Percent10Minutes
+        Type: Canary10Percent5Minutes
 #        Alarms:
 #          # A list of alarms that you want to monitor
 #          - !Ref AliasErrorMetricGreaterThanZeroAlarm
